--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.App-header {
+  background-color: #b702d6;
+  height: 50px;
+  padding: 10px;
+  color: white;
+  text-align: center;
+}
