Trial to render table of each transaction

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 
 
 .App-header {
-  background-color: #b702d6;
+  background-color: #5f036f;
   height: 50px;
   padding: 10px;
   color: white;
