--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,19 @@ code {
   color: white;
   text-align: center;
 }
+
+.table {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.table thead {
+  text-align: center;
+  margin: 20px;
+  padding: 20px;
+  border: 2px solid #0000;
+}
+
+
