Created Add Commit

--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,9 @@ code {
 }
 
 
+.add-form {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
