--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,16 @@ code {
   border: 2px solid #0000;
 }
 
+.table tbody {
+  text-align: center;
+  margin: 20px;
+  padding: 20px;
+  border: 2px solid #0000;
+}
+
+.table tbody tr td {
+  border: 2px solid #0000;
+}
 
 .add-form {
   display: flex;
